Fix layout bug in graph view
graph 크기 깨짐 현상 고침

--- a/bell_web/public/stylesheets/graph.css
+++ b/bell_web/public/stylesheets/graph.css
@@ -1,20 +1,20 @@
 .graph_view {
     background-color: mediumaquamarine;
     font-family: 'Caveat', cursive;
-    height: 100vh;
-    width: 60%;
-    float: left;  
+    /* height: 100vh; */
+    /* width: 60%; */
+    /* float: left;   */
 }
-.info_view {
-    height: 100vh;
-    width: 100%;
+.info_view { 
+    /* height: 100vh; */
+    /* width: 100%; */
     /* background-color: #bec7df; */
     background-color: #d2e2f5;
 }
 #info_container {
     font-family: 'Caveat', cursive;
-    height: 100vh;
-    width: 40%;
+    /* height: 100vh; */
+    /* width: 40%; */
     /*background-image : url("/img/superlative.png");*/
     background-color: #ffffff;
     float: left;
@@ -24,18 +24,22 @@ h1{
     padding-left: 50px;
     padding-top: 20px;
 }
+
 canvas{
-    padding-left: 50px;
+    padding: 10px;
 }
+
 .table{
     padding-top: 200px;
     font-family: 'Nanum Gothic Coding', monospace;
 }
+
 .p{
     text-align: right;
-    margin-top: -20px;
+    /* margin-top: -20px; */
     font-family: 'Nanum Gothic Coding', monospace;
 }
+
 h3{
     font-family: 'Nanum Gothic Coding', monospace;
 }
